--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,9 @@
 docx2txt==0.8
-google-generativeai==0.8.4
+google-generativeai>=0.9.0
+langchain-google-genai>=2.0.1
 langchain==0.3.20
 langchain-community==0.3.19
 langchain-core==0.3.43
-langchain-google-genai==2.0.11
 langchain-text-splitters==0.3.6
 langsmith==0.3.13
 lxml==5.3.1
